--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,15 +3,21 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Game Number</th>
-        <th scope="col">Game Length</th>
+        <th scope="col">Id</th>
+        <th scope="col">Year</th>
+        <th scope="col">Age</th>
+        <th scope="col">Name</th>
+        <th scope="col">Movie</th>
     </tr>
     </thead>
     <tbody>
-    {% for res in results %}
+    {% for award in awards %}
     <tr>
-        <td><a href="view/{{res.GameNumber}}">{{ res.GameNumber }}</a></td>
-        <td>{{ res.GameLength }}</td>
+        <td><a href="/view/{{award.id}}" class="card-link btn btn-primary">{{ award.id }}</a></td>
+        <td>{{ award.year }}</td>
+        <td>{{ award.age }}</td>
+        <td>{{ award.name }}</td>
+        <td>{{ award.movie }}</td>
     </tr>
     {% endfor %}
     </tbody>
