--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,28 +11,33 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
-
-    <title>Welcome to my Site of Snakes & Ladders!</title>
+{% if user %}
+    <title>Welcome to {{ user.username }}'s site</title>
+    {% else %}
+    <title>Welcome to My Site!</title>
+    {% endif %}
 <head>
  <body>
 <!-- As a heading -->
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-1">
-  <title>Welcome to My Homepage</title>
+  <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Homepage{% else %}
+    <title>Welcome to My Homepage</title>
+    {% endif %}</a>
   <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="/api/v1/results">Snakes&Ladders_API_JSON_endpoint <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/api/awards">Awards API JSON endpoint <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-            <a class="btn btn-success pl-2 lr-2 ml-3" href="/results/new">Add +<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/awards/new"> New Record <span class="sr-only">(current)</span></a>
         </li>
     </ul>
   </div>
