--- a/app/template/edit.html
+++ b/app/template/edit.html
@@ -1,42 +1,34 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/edit/{{city.id}}" method="post">
+<form action="/edit/{{award.id}}" method="post">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName" value="{{city.fldName}}">
+            <label>Id: {{award.id}}</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <label for="year">Year Awarded</label>
+            <input id="year" type="text" class="form-control" placeholder="Year"
+                   name="year" value="{{award.year}}">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" type="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation" value="{{city.fldAbbreviation}}">
-        </div>
-        <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry" value="{{city.fldCountry}}">
+            <label for="age">Age of the Artist</label>
+            <input id="age" type="text" class="form-control" placeholder="Age" name="age"
+                   value="{{award.age}}">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat" value="{{city.fldLat}}">
+            <label for="name">Name of Artist</label>
+            <input id="name" type="text" class="form-control" placeholder="Name" name="name"
+                   value="{{award.name}}">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong" value="{{city.fldLong}}">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
-
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status"
-                   name="fldCapitalStatus" value="{{city.fldCapitalStatus}}">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation" value="{{city.fldPopulation}}">
+            <label for="movie">Name of the Movie</label>
+            <input id="movie" type="text" class="form-control" placeholder="Movie" name="movie"
+                   value="{{award.movie}}">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
